# streprogen

./: .gitignore  .travis.yml  MANIFEST  README.md  README.rst  deploy.sh  pyproject.toml  setup.py
.github/workflows/: build.yml
docs/: Makefile  classes.rst  classes_full.rst  classes_overview.rst  conf.py  examples.rst  functions.rst  index.rst  make.bat  modules.rst  requirements.txt  streprogen.rst
docs/_html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  streprogen.html
docs/_templates/: sidebarlogo.html
docs/examples/: 3 day full body.ipynb  3 day split.ipynb  Advanced features.ipynb  Beginner 5x5 modified.ipynb  Beginner 5x5.ipynb  Block periodization.ipynb  Custom optimization.ipynb  Essential features.ipynb  Example - 3 day full body longterm.ipynb  Example - 3 day split with periodization.ipynb  Example - Beginner 5x5 program.ipynb  Intermediate features.ipynb  Meal planning.ipynb  (+9 more)
examples/: Example - 3 day split with periodization.ipynb  Example - Beginner 5x5 program modified.ipynb  Example - Beginner 5x5 program.ipynb  Example - Meal planning.ipynb  Example - Single day meal plan.ipynb  Novice program.ipynb  Novice_Program.ipynb  Streprogen - Advanced features.ipynb  Streprogen - Essential features.ipynb  Streprogen - Intermediate features.ipynb  test_notebooks.py
jupyter_notebooks/: Documentation.ipynb
streprogen/: __init__.py  day.py  diet.py  exercises.py  mealplan.py  modeling.py  optimization.py  program.html  program.py  program.tex  program.txt  sampling.py  utils.py
(+25 files in other folders)
