[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "streprogen"
version = "4.0.2"
dynamic = ["readme"]
description = "The Python strength program generator."
authors = [
    {name = "Tommy Odland", email = "tommy.odland@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["strength", "training", "health", "fitness", "generator", "weightlifting", "powerlifting", "exercise"]
requires-python = ">=3.8"
dependencies = [
    "jinja2>=2.11.2",
    "ortools>=7.7.7810",
]

[project.urls]
Homepage = "https://github.com/tommyod/streprogen"
Repository = "https://github.com/tommyod/streprogen.git"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["."]
include = ["streprogen*"]
exclude = ["contrib", "docs", "tests"]

[tool.setuptools.package-data]
"streprogen" = ["templates/*", "*.tex", "*.html"]
